--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^4.0.13",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "sortablejs": "^1.15.6",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
