--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^4.0.13",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0",
     "sortablejs": "^1.15.6",
     "sweetalert2": "^11.17.2",
